--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@ body {
 	
 	margin:0px;
 }
+*{
+	animation-name: panimation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+@keyframes panimation {
+    0%   {background-color: #000000;}
+    50%  {background-color: #FFFFFF;}
+    100%   {background-color: #000000;}
+}
 #image{
 	background-image:url(coffee.jpg);
 	height:100%;
